pre-1.9.30
    Bug Fixes
      - fix css property value parsing to better handle !important

    New Features
    
Sigil-1.9.20
    Bug Fixes
      - double width of new Find Replace icons to make them easier to access
      - improve new Find Replace icon tooltips to be include short name on top
      - fix bug that caused file rename changes to fail when updating smil
      - Metadata Editor will now strip out unneeded xmlns:dc attributes on dc tags
      - Metadata Editor is now more robust to language codes that have incorrect case in the metadata
      - clarify Create HTML ToC menu entry works from existing ToC
      - prevent indavertent "\" chars be treated like escapes when updating metadata
      - fix MetaEditor nit of not auto adding "aut" role to Author metadata for epub2
      - make Spellcheck Editor count align column numerically (right)

     New Features
      - add ability for a user-template*.xhtml and user-template*.css
          be read from Sigil Prefs to create new empty xhtml and css files
      - updated to very latest MathJax version 3.2.2 for mathml support in Preview
      - add ability to cycle through 2 different custom stylesheets (and none at all) for use with Preview 


Sigil-1.9.10
    Bug Fixes
      - Fix insertion of id and links when cursor immediately before a closing tag
      - Make sure bundled PySide6 can find QtWebEngine resources on Windows (Qt6)
      - Properly recreate or remove encryption.xml depending on font obfuscating or not
      - Make Qt6 versions of Sigil use their own ini files to prevent corruption
      - treat figcaption as an "other text holder" when prettifying
        
    New Features
      - Redesign the FindReplace dialog user interface to minimize size while adding features
      - Add a FindReplace "Text" only checkbox and support to exclude tags from search
      - Add a Toggle Line Wrap Mode and its support added to CodeView via pop-up menu